src/expr/src/scalar/snapshots/mz_expr__scalar__func__encoded_bytes_char_length.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(sqlname = \"length\", propagates_nulls = true)]\nfn encoded_bytes_char_length(a: &ByteStr, b: &str) -> Result<i32, EvalError> {\n    let encoding_name = b.to_lowercase().replace('_', \"-\").into_boxed_str();\n    let enc = match encoding_from_whatwg_label(&encoding_name) {\n        Some(enc) => enc,\n        None => return Err(EvalError::InvalidEncodingName(encoding_name)),\n    };\n    let decoded_string = match enc.decode(&*a, DecoderTrap::Strict) {\n        Ok(s) => s,\n        Err(e) => {\n            return Err(EvalError::InvalidByteSequence {\n                byte_sequence: e.into(),\n                encoding_name,\n            });\n        }\n    };\n    let count = decoded_string.chars().count();\n    i32::try_from(count)\n        .map_err(|_| EvalError::Int32OutOfRange(count.to_string().into()))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct EncodedBytesCharLength;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for EncodedBytesCharLength {
    type Input1 = &'a ByteStr;
    type Input2 = &'a str;
    type Output = Result<i32, EvalError>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        encoded_bytes_char_length(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn propagates_nulls(&self) -> bool {
        true
    }
}
impl std::fmt::Display for EncodedBytesCharLength {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("length")
    }
}
fn encoded_bytes_char_length(a: &ByteStr, b: &str) -> Result<i32, EvalError> {
    let encoding_name = b.to_lowercase().replace('_', "-").into_boxed_str();
    let enc = match encoding_from_whatwg_label(&encoding_name) {
        Some(enc) => enc,
        None => return Err(EvalError::InvalidEncodingName(encoding_name)),
    };
    let decoded_string = match enc.decode(&*a, DecoderTrap::Strict) {
        Ok(s) => s,
        Err(e) => {
            return Err(EvalError::InvalidByteSequence {
                byte_sequence: e.into(),
                encoding_name,
            });
        }
    };
    let count = decoded_string.chars().count();
    i32::try_from(count)
        .map_err(|_| EvalError::Int32OutOfRange(count.to_string().into()))
}
