src/expr/src/scalar/snapshots/mz_expr__scalar__func__is_like_match_case_insensitive.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(is_infix_op = true, sqlname = \"ilike\")]\nfn is_like_match_case_insensitive(\n    haystack: &str,\n    pattern: &str,\n) -> Result<bool, EvalError> {\n    like_pattern::compile(pattern, true).map(|needle| needle.is_match(haystack))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct IsLikeMatchCaseInsensitive;
impl crate::func::binary::EagerBinaryFunc for IsLikeMatchCaseInsensitive {
    type Input1<'a> = &'a str;
    type Input2<'a> = &'a str;
    type Output<'a> = Result<bool, EvalError>;
    fn call<'a>(
        &self,
        a: Self::Input1<'a>,
        b: Self::Input2<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        is_like_match_case_insensitive(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn is_infix_op(&self) -> bool {
        true
    }
}
impl std::fmt::Display for IsLikeMatchCaseInsensitive {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("ilike")
    }
}
fn is_like_match_case_insensitive(
    haystack: &str,
    pattern: &str,
) -> Result<bool, EvalError> {
    like_pattern::compile(pattern, true).map(|needle| needle.is_match(haystack))
}
